removed a placeholder for 24hr change, re-applied confirm.tsx fix, aligned text better for sportsbook theme

--- a/packages/augur-ui/src/modules/account/components/open-markets.styles.less
+++ b/packages/augur-ui/src/modules/account/components/open-markets.styles.less
@@ -250,8 +250,7 @@
       .mono-12-semi-bold;
 
       color: var(--color-primary-text);
-      margin-top: auto;
-      margin-bottom: auto;
+      height: @size-19;
       text-transform: none;
     }
 
